[package]
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
edition = "2018"
name = "img_dedup"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^2.33.3", features = ["yaml"]}
image = "^0.23.14"
img_hash = "^3.2.0"
itertools = "^0.10"
log = "^0.4.14"
rand = "^0.8.3"
rayon = "^1.5.1"
regex = "^1.5"
simple_logger = "^1.11.0"
