[package]
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
edition = "2018"
name = "img_dedup"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.3"
crossbeam = "^0.8.1"
crossbeam-channel = "^0.5.1"
image = "^0.23.14"
img_hash = "^3.2.0"
itertools = "^0.10"
log = "^0.4.14"
num_cpus = "^1.13.0"
regex = "^1.5"
simple_logger = "^1.11.0"
